--- a/src/uikit.html
+++ b/src/uikit.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="ui__title">Titles</div>
+        <h1 class="h1">Main title </h1>
+        <div class="super">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, nemo.</div>
+    </div>
 </body>
 
 </html>
