--- a/src/uikit.html
+++ b/src/uikit.html
@@ -5,15 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UIKIT</title>
+    <script src="https://kit.fontawesome.com/f79d696885.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/styles/uikit.scss">
 </head>
 
 <body>
     <div class="container">
         <div class="ui__title">Titles</div>
-        <h1 class="h1">Main title </h1>
-        <div class="super">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, nemo.</div>
-    </div>
+        <h1 class="h1">Save your data storage here.</h1>
+        <div class="divider"></div>
+        <h2 class="h2">We are a high-level data storage bank</h2>
+        <div class="divider"></div>
+        <h3 class="h3">Search Data</h3>
+        <div class="divider"></div>
+        <p class="p1">Data Warehouse is a data storage area that has been
+            tested for security, so you can store your data here
+            safely but not be afraid of being stolen by others.</p>
+        <div class="divider"></div>
+        <p class="p2">Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is
+            useful
+            for making it easier to find data effectively saving time.</p>
+        <div class="divider"></div>
+        <div class="feature">
+            <div class="feature__trapezoid"></div>
+            <div class="feature__item">
+                <div class="feature__text">
+                    <h3 class="h3">Search Data</h3>
+                    <p class="p2 ">Don’t worry if your data is very large, the Data Warehoue provides a search
+                        engine, which is useful for making it easier to find data effectively saving time.</p>
+                </div>
+
+                <a href="#" class="feature__link">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+            <img src="./assets/images/image3 1.png" alt="man" class="feature__img">
+
+        </div>
+
 </body>
 
 </html>
