--- a/src/uikit.html
+++ b/src/uikit.html
@@ -28,6 +28,7 @@
         <div class="divider"></div>
         <div class="feature">
             <div class="feature__trapezoid"></div>
+            <img src="./assets/images/image3 1.png" alt="man" class="feature__img">
             <div class="feature__item">
                 <div class="feature__text">
                     <h3 class="h3">Search Data</h3>
@@ -37,10 +38,39 @@
 
                 <a href="#" class="feature__link">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
-            <img src="./assets/images/image3 1.png" alt="man" class="feature__img">
-
         </div>
+        <div class="divider"></div>
+        <div class="ui__title">Buttons</div>
+        <a href="#" class="light-btn">Request Demo <i class="fas fa-long-arrow-alt-right"></i></a>
+        <a href="#" class="dark-btn">Learn more</a>
+        <div class="divider"></div>
 
+        <div class="divider"></div>
+        <div class="ui__title">Icons</div>
+        <div class="divider"></div>
+        <div class="social">
+            <a href="#" class="social__item"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social__item"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social__item"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="divider"></div>
+        <div class="ui__title">Testimonials</div>
+        <div class="divider"></div>
+        <div class="testimonial">
+            <img src="./assets/images/Ellipse 76.png" alt="76" class="testimonial__img">
+            <div class="testimonial__item">
+                <p class="testimonial__item-title">John Fang </p>
+                <a href="#" class="testimonial__item-link">wordfaang.com</a>
+                <p class="testimonial__item-text">
+                    Suspendisse ultrices at diam lectus nullam.
+                    Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam laoreet
+                    nulla.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="divider"></div>
+    </div>
 </body>
 
 </html>
