--- a/src/uikit.html
+++ b/src/uikit.html
@@ -68,9 +68,40 @@
                 </p>
             </div>
         </div>
+
+
+
+
+
+
+        <div class="divider"></div>
+
+        <div class="ui__title">Logo</div>
+        <div class="logo">
+            <div class="logo__s"></div>
+            <div class="logo__m"></div>
+        </div>
+        <div class="divider"></div>
+        <div class="ui__title">End message</div>
+        <div class="endmess">
+            <div class="endmess__circle">
+                <div class="endmess__long">
+                    <div class="endmess__long-ball1"></div>
+                    <div class="endmess__long-ball2"></div>
+                    <div class="endmess__long-ball3"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="divider"></div>
+
+
+
+
+
     </div>
-    <div class="divider"></div>
-    </div>
+
 </body>
 
 </html>
