--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SaveData</title>
+    <script src="https://kit.fontawesome.com/f79d696885.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/styles/index.scss">
 </head>
 
 <body>
+    <header>
+        <div class="container header">
 
+            <nav class="header__nav">
+                <div class="logo">
+                    <div class="logo__s"></div>
+                    <div class="logo__m"></div>
+                </div>
+                <ul class="header__nav-items">
+                    <li class="header__nav-item active">
+                        <a href="#" class="header__nav-link">About</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a href="#" class="header__nav-link">Help</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a href="#" class="header__nav-link">Features</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a href="#" class="header__nav-link">Signup</a>
+                    </li>
+
+                </ul>
+            </nav>
+            <div class="header__btn">
+                <a href="#" class="light-btn">Request Demo <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+
+        </div>
+    </header>
+
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
