--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,12 @@
                     <li class="header__nav-item">
                         <a href="#" class="header__nav-link">Signup</a>
                     </li>
-
                 </ul>
+                <div class="header__burger">
+                    <div class="header__burger-line1"></div>
+                    <div class="header__burger-line2"></div>
+                    <div class="header__burger-line3"></div>
+                </div>
             </nav>
             <div class="header__btn">
                 <a href="#" class="light-btn">Request Demo <i class="fas fa-long-arrow-alt-right"></i></a>
@@ -40,6 +44,20 @@
 
         </div>
     </header>
+    <main>
+        <section class="title container">
+            <h1 class="title__h1">Save your data storage here.</h1>
+            <img src="./assets/images/image1 1.png" alt="girls" class="title__img">
+            <p class="title__text">Data Warehouse is a data storage area that has been
+                tested for security, so you can store your data here
+                safely but not be afraid of being stolen by others.</p>
+
+            <div class="title__btn">
+                <a href="#" class="dark-btn">Learn more</a>
+            </div>
+
+        </section>
+    </main>
 
 
     <script src="./main.js"></script>
