--- a/src/uikit.html
+++ b/src/uikit.html
@@ -31,8 +31,9 @@
             <img src="./assets/images/image3 1.png" alt="man" class="feature__img">
             <div class="feature__item">
                 <div class="feature__text">
-                    <h3 class="h3">Search Data</h3>
-                    <p class="p2 ">Don’t worry if your data is very large, the Data Warehoue provides a search
+                    <h3 class="feature__text-title">Search Data</h3>
+                    <p class="feature__text-p">Don’t worry if your data is very large, the Data Warehoue provides a
+                        search
                         engine, which is useful for making it easier to find data effectively saving time.</p>
                 </div>
 
