--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="container header">
+        <div class="header">
 
             <nav class="header__nav">
                 <div class="logo">
@@ -45,7 +45,7 @@
         </div>
     </header>
     <main>
-        <section class="title container">
+        <section class="title">
             <h1 class="title__h1">Save your data storage here.</h1>
             <img src="./assets/images/image1 1.png" alt="girls" class="title__img">
             <p class="title__text">Data Warehouse is a data storage area that has been
@@ -56,6 +56,85 @@
                 <a href="#" class="dark-btn">Learn more</a>
             </div>
 
+        </section>
+        <section class="about">
+            <div class="about__text">
+
+                <h2 class="about__text-title">We are a high-level data storage bank</h2>
+
+                <p class="about__text-p">The place to store various data that you can access at any time through the
+                    internet
+                    and where you can carry it.
+                    This very flexible storage area has a high level of security. To enter into your own data you must
+                    enter
+                    the password that you created when you registered in this Data Warehouse. </p>
+            </div>
+
+            <img src="./assets/images/image2.png" alt="girl in glasses" class="about__img">
+
+        </section>
+        <section class="features">
+            <h2 class="features__title">Features</h2>
+            <p class="features__text">Some of the features and advantages that we provide for those of you who store
+                data in this Data Warehouse.</p>
+            <div class="features__items">
+                <div class="feature">
+                    <div class="feature__trapezoid"></div>
+                    <img src="./assets/images/image3 1.png" alt="man" class="feature__img">
+                    <div class="feature__item">
+                        <div class="feature__text">
+                            <h3 class="feature__text-title">Search Data</h3>
+                            <p class="feature__text-p">Don’t worry if your data is very large, the Data Warehoue
+                                provides a
+                                search
+                                engine, which is useful for making it easier to find data effectively saving time.</p>
+                        </div>
+
+                        <a href="#" class="feature__link">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="feature__color2 feature__trapezoid"></div>
+                    <img src="./assets/images/image4.png" alt="man" class="feature__img">
+                    <div class="feature__item">
+                        <div class="feature__text">
+                            <h3 class="feature__text-title">24 Hours Access</h3>
+                            <p class="feature__text-p">Access is given 24 hours a full morning to night and meet again
+                                in the morning, giving you comfort when you need data when urgent.</p>
+                        </div>
+
+                        <a href="#" class="feature__link">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="feature__trapezoid feature__color3"></div>
+                    <img src="./assets/images/image5 1.png" alt="man" class="feature__img">
+                    <div class="feature__item">
+                        <div class="feature__text">
+                            <h3 class="feature__text-title">Print Out</h3>
+                            <p class="feature__text-p">Print out service gives you convenience if someday
+                                you need print data, just edit it all and just print it.</p>
+                        </div>
+
+                        <a href="#" class="feature__link">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+                <div class="feature">
+                    <div class="feature__trapezoid feature__color4"></div>
+                    <img src="./assets/images/image6 1.png" alt="man" class="feature__img">
+                    <div class="feature__item">
+                        <div class="feature__text">
+                            <h3 class="feature__text-title">Security Code</h3>
+                            <p class="feature__text-p">Data Security is one of our best facilities. Allows for your
+                                files
+                                to be safer. The file can be secured with a code or password that
+                                you created, so only you can open the file.</p>
+                        </div>
+
+                        <a href="#" class="feature__link">Learn more <i class="fas fa-long-arrow-alt-right"></i></a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
