--- a/src/index.html
+++ b/src/index.html
@@ -136,8 +136,149 @@
                 </div>
             </div>
         </section>
-    </main>
+        <section class="testimonials">
+            <div class="testimonials__item">
+                <h2 class="testimonials__title">Testimonials</h2>
+                <div class="testimonials__slider">
+                    <div class="testimonial-slide testimonial active-slide">
+                        <img src="./assets/images/Ellipse 76.png" alt="76" class="testimonial__img">
+                        <div class="testimonial__item">
+                            <p class="testimonial__item-title">John Fang </p>
+                            <a href="#" class="testimonial__item-link">wordfaang.com</a>
+                            <p class="testimonial__item-text">
+                                Suspendisse ultrices at diam lectus nullam.
+                                Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
+                                laoreet
+                                nulla.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial testimonial-slide">
+                        <img src="./assets/images/Ellipse 76 (1).png" alt="76" class="testimonial__img">
+                        <div class="testimonial__item">
+                            <p class="testimonial__item-title">Jeny Doe </p>
+                            <a href="#" class="testimonial__item-link">UX Engineer</a>
+                            <p class="testimonial__item-text">
+                                Suspendisse ultrices at diam lectus nullam.
+                                Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
+                                laoreet
+                                nulla.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial testimonial-slide">
+                        <img src="./assets/images/Ellipse 76.png" alt="76" class="testimonial__img">
+                        <div class="testimonial__item">
+                            <p class="testimonial__item-title">John Fang </p>
+                            <a href="#" class="testimonial__item-link">wordfaang.com</a>
+                            <p class="testimonial__item-text">
+                                Suspendisse ultrices at diam lectus nullam.
+                                Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
+                                laoreet
+                                nulla.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial testimonial-slide">
+                        <img src="./assets/images/Ellipse 76niga.png" alt="76" class="testimonial__img">
+                        <div class="testimonial__item">
+                            <p class="testimonial__item-title">William Lawson </p>
+                            <a href="#" class="testimonial__item-link">web-analitic</a>
+                            <p class="testimonial__item-text">
+                                Suspendisse ultrices at diam lectus nullam.
+                                Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
+                                laoreet
+                                nulla.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials__controls">
+                    <div class="testimonials__controls-dots">
+                        <div class="testimonials__controls-dot active-dot"></div>
+                        <div class="testimonials__controls-dot"></div>
+                        <div class="testimonials__controls-dot"></div>
+                        <div class="testimonials__controls-dot"></div>
+                    </div>
+                    <div class="testimonials__controls-arrows">
+                        <button class="testimonials__controls-arrow arrow-left active-arrow"><i
+                                class="fas fa-arrow-left"></i></button>
+                        <button class="testimonials__controls-arrow arrow-right"><i
+                                class="fas fa-arrow-right"></i></button>
+                    </div>
 
+                </div>
+            </div>
+
+        </section>
+        <div class="divider"></div>
+    </main>
+    <footer class="footer">
+        <section class="footer__actions">
+            <div class="footer__actions-text">
+                <div class="footer__actions-text__title">Try for free!</div>
+                <div class="footer__actions-text__p">Get limited 1 week free try our features!</div>
+            </div>
+            <div class="footer__actions-btn">
+                <a href="#" class="dark-btn">Learn more</a>
+                <a href="#" class="light-btn">Request Demo <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+        </section>
+        <section class="footer__nav">
+            <div class="footer__nav-info">
+                <div class="footer__nav-info__box">
+                    <div class="logo">
+                        <div class="logo__s"></div>
+                        <div class="logo__m"></div>
+                    </div>
+                    <h3 class="footer__nav-info__title">DataWarehouse</h3>
+                </div>
+                <div class="footer__nav-info__adress">Warehouse Society, 234</br>Bahagia Ave Street PRBW 29281
+                </div>
+                <div class="footer__nav-info__contacts">info@warehouse.project <br>1-232-3434 (Main)
+                </div>
+            </div>
+            <div class="footer__nav-menu">
+                <div class="footer__nav-menu__about">
+                    <a href="#">About</a>
+                    <a href="#">Profile</a>
+                    <a href="#">Features</a>
+                    <a href="#">Careers</a>
+                    <a href="#">DW News</a>
+                </div>
+                <div class="footer__nav-menu__help">
+                    <a href="#">Help</a>
+                    <a href="#">Support</a>
+                    <a href="#">Sign up</a>
+                    <a href="#">Guides</a>
+                    <a href="#">Reports</a>
+                    <a href="#">Q&A</a>
+                </div>
+            </div>
+
+            <div class="footer__nav-social">
+                <p class="footer__nav-social__title">Social Media</p>
+                <div class="social">
+                    <a href="#" class="social__item"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social__item"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social__item"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </section>
+        <div class="footer__basement">
+            <span class="footer__basement-copy"> &#9400; Datawarehouse™, 2020. All rights reserved.<br>
+                Company Registration Number: 21479524.</span>
+            <div class="endmess">
+                <div class="endmess__circle">
+                    <div class="endmess__long">
+                        <div class="endmess__long-ball1"></div>
+                        <div class="endmess__long-ball2"></div>
+                        <div class="endmess__long-ball3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="./main.js"></script>
 </body>
